--- a/refs.bib
+++ b/refs.bib
@@ -378,3 +378,26 @@ note = {(Accessed on 06/02/2022)}
 	eprint = {https://www.biorxiv.org/content/early/2022/07/18/2022.03.22.485312.full.pdf},
 	journal = {bioRxiv}
 }
+
+
+@Article{pmid18034891,
+   Author="Huson, D. H.  and Richter, D. C.  and Rausch, C.  and Dezulian, T.  and Franz, M.  and Rupp, R. ",
+   Title="{{D}endroscope: {A}n interactive viewer for large phylogenetic trees}",
+   Journal="BMC Bioinformatics",
+   Year="2007",
+   Volume="8",
+   Pages="460",
+   Month="Nov"
+}
+
+
+@Article{densitree,
+   Author="Bouckaert, R. R. ",
+   Title="{{D}ensi{T}ree: making sense of sets of phylogenetic trees}",
+   Journal="Bioinformatics",
+   Year="2010",
+   Volume="26",
+   Number="10",
+   Pages="1372--1373",
+   Month="May"
+}
