Updates from Overleaf

--- a/01_Article_MainText.tex
+++ b/01_Article_MainText.tex
@@ -1,6 +1,6 @@
 \leadauthor{Sanderson}
 
-\title{Exploration of million-sequence viral phylogenies \\with Taxonium}
+\title{Taxonium, a web-based tool for exploring large phylogenetic trees}
 \shorttitle{Taxonium}
 
 \author[1]{Theo Sanderson \orcidlink{0000-0003-4177-2851}}
